--- a/index.html
+++ b/index.html
@@ -1,64 +1,73 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Twitter Registration</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2b8290;">
     <div class="container">
-        <div class="row mt-2">
-            <form class="d-flex" name="myform">
-                <div class="form-group col-sm-2 mx-1">
-                    <label for="sum">Введите сумму:</label>
-                    <input type="text" class="form-control" id="sum"  name="sum">
-                </div>
-                <div class="form-group col-sm-1 me-3">
-                    <select class="form-select mt-4" aria-label="Currency" id="currency">
-                        <option selected value="KZT">KZT</option>
-                        <option value="USD">USD</option>
-                        <option value="EUR">EUR</option>
-                    </select>
-                </div>
-                <div class="form-group col-sm-2 mx-1">
-                    <label for="kzt"><b>KZT (tenge)</b></label>
-                    <input type="text" class="form-control bg-light" id="kzt" name="kzt" >
-                </div>
-                <div class="form-group col-sm-2 mx-1">
-                    <label for="usd"><b>USD (dollar)</b></label>
-                    <input type="text" class="form-control bg-light" id="usd" name="usd">
-                </div>
-                <div class="form-group col-sm-2 mx-1">
-                    <label for="eur"><b>EUR (euro)</b></label>
-                    <input type="text" class="form-control bg-light" id="eur" name="eur">
-                </div>
-            </form>
+        <a class="navbar-brand" href="#">TWITTER</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tweets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Register</a>
+                </li>
+            </ul>
         </div>
     </div>
-    <script>
-        function callOnChange(){
-            if(currency.value == "KZT"){
-                kzt.value = "-";
-                usd.value = (parseInt(sum.value)/431).toFixed(2);
-                eur.value = (parseInt(sum.value)/509).toFixed(2);
-            }
-            if(currency.value == "USD"){
-                kzt.value = (parseInt(sum.value)*429).toFixed(2);
-                usd.value = "-";
-                eur.value = ((parseInt(sum.value)*429)/509).toFixed(2);
-            }
-            if(currency.value == "EUR"){
-                kzt.value = (parseInt(sum.value)*507).toFixed(2);
-                usd.value = ((parseInt(sum.value)*507)/431).toFixed(2);
-                eur.value = "-";
-            }
+</nav>
 
-        }
-        sum.onchange = callOnChange;
-        currency.onchange = callOnChange;
-
-    </script>
-    <script src="js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-body">
+                    <form id="userForm">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">EMAIL:</label>
+                            <input type="email" name="email" class="form-control" id="email" placeholder="">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">PASSWORD:</label>
+                            <input type="password" name="password" class="form-control" id="password" placeholder="">
+                        </div>
+                        <div class="mb-3">
+                            <label for="fullName" class="form-label">FULL NAME:</label>
+                            <input type="text" class="form-control" name="fullName" id="fullName" placeholder="">
+                        </div>
+                        <div class="mb-3">
+                            <label for="country" class="form-label">COUNTRY:</label>
+                            <select class="form-select" id="country" name="country">
+                                <option selected>Kazakhstan</option>
+                                <option>USA</option>
+                                <option>UK</option>
+                                <option>Canada</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="birthdate" class="form-label">BIRTHDATE:</label>
+                            <input type="date" class="form-control" id="birthdate" name="birthdate">
+                        </div>
+                        <button type="submit" class="btn w-30" style="background-color: #00008a; color: white;" id="register">REGISTER</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/script.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
