--- a/login.html
+++ b/login.html
@@ -32,10 +32,10 @@
                     <a class="nav-link text-white" href="#">Tweets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Login</a>
+                    <a class="nav-link text-white" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Register</a>
+                    <a class="nav-link text-white" href="index.html">Register</a>
                 </li>
             </ul>
         </div>
